--- a/yljapp/src/main/res/layout/layout_task_modify.xml
+++ b/yljapp/src/main/res/layout/layout_task_modify.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical">
 
         <TextView
+            style="@style/CommonTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/task_info" />
@@ -19,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="50dp">
+            android:paddingLeft="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -27,6 +28,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    style="@style/CommonSummary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/task_info_name" />
@@ -43,6 +45,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    style="@style/CommonSummary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/task_info_road_name" />
@@ -60,11 +63,13 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    style="@style/CommonSummary"
+                    android:layout_width="@dimen/common_summary_space"
                     android:layout_height="wrap_content"
                     android:text="@string/task_origin" />
 
                 <TextView
+                    style="@style/CommonSummary"
                     android:id="@+id/tv_origin_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
