--- a/yljapp/src/main/res/values/dimens.xml
+++ b/yljapp/src/main/res/values/dimens.xml
@@ -20,5 +20,9 @@
     <dimen name="layout_padding_left">20dp</dimen>
 
     <dimen name="common_text_size">20sp</dimen>
+    <dimen name="text_title">18sp</dimen>
+    <dimen name="text_summary">18sp</dimen>
+
+    <dimen name="common_summary_space">200dp</dimen>
 
 </resources>
