--- a/yljapp/src/main/res/layout/activity_menu.xml
+++ b/yljapp/src/main/res/layout/activity_menu.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="@drawable/side_nav_bar"
+    android:fitsSystemWindows="true"
     tools:context="com.ylj.main.MenuActivity">
 
     <LinearLayout
-        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <RelativeLayout
             android:id="@+id/rl_connect"
             android:layout_width="170dp"
-            android:layout_height="170dp">
+            android:layout_height="210dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -36,9 +37,9 @@
 
         <RelativeLayout
             android:id="@+id/rl_task"
-            android:layout_marginLeft="20dp"
             android:layout_width="170dp"
-            android:layout_height="170dp">
+            android:layout_height="210dp"
+            android:layout_marginLeft="20dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -57,9 +58,9 @@
 
         <RelativeLayout
             android:id="@+id/rl_hisdata"
-            android:layout_marginLeft="20dp"
             android:layout_width="170dp"
-            android:layout_height="170dp">
+            android:layout_height="210dp"
+            android:layout_marginLeft="20dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -78,9 +79,9 @@
 
         <RelativeLayout
             android:id="@+id/rl_manager"
-            android:layout_marginLeft="20dp"
             android:layout_width="170dp"
-            android:layout_height="170dp">
+            android:layout_height="210dp"
+            android:layout_marginLeft="20dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -105,6 +106,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/fab_menu"
+        app:backgroundTint="@color/fab_color"
+        app:rippleColor="@color/fab_color_clicked" />
 
 </android.support.design.widget.CoordinatorLayout>
