--- a/yljapp/src/main/res/layout/activity_setting.xml
+++ b/yljapp/src/main/res/layout/activity_setting.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:fitsSystemWindows="true"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_horizontal"
+    android:fitsSystemWindows="true"
     tools:context="com.ylj.setting.SettingActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
@@ -11,7 +13,7 @@
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" android:theme="@style/AppTheme.AppBarOverlay"
+            android:background="@drawable/background_horizontal" android:theme="@style/AppTheme.AppBarOverlay"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
