--- a/yljapp/src/main/res/layout/content_task_modify.xml
+++ b/yljapp/src/main/res/layout/content_task_modify.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ylj.task.TaskModifyActivity"
     tools:showIn="@layout/activity_task_modify">
 
     <ScrollView
-        android:layout_width="400dp"
+        android:background="@drawable/layout_white"
+        android:layout_width="450dp"
+        android:padding="20dp"
+        android:paddingTop="10dp"
         android:layout_height="match_parent"
         android:layout_centerInParent="true">
 
@@ -35,11 +34,13 @@
                 android:orientation="vertical">
                 <Button
                     android:id="@+id/btn_save"
+                    style="@style/BlueButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/task_save"/>
                 <Button
                     android:id="@+id/btn_save_and_adjust"
+                    style="@style/BlueButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/task_save_and_enter_adjust"/>
@@ -52,6 +53,7 @@
                 android:orientation="vertical">
                 <Button
                     android:id="@+id/btn_enter_adjust"
+                    style="@style/BlueButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/task_enter_adjust"/>
