--- a/yljapp/src/main/res/layout/layout_task_modify_info.xml
+++ b/yljapp/src/main/res/layout/layout_task_modify_info.xml
@@ -12,6 +12,7 @@
 
         <TextView
             android:layout_width="match_parent"
+            style="@style/CommonTitle"
             android:layout_height="wrap_content"
             android:text="@string/task_info" />
 
@@ -19,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="50dp">
+            android:paddingLeft="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -27,12 +28,14 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    style="@style/CommonSummary"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:text="@string/task_info_name" />
 
                 <TextView
                     android:id="@+id/tv_task_name"
+                    style="@style/CommonSummary"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -43,11 +46,13 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    style="@style/CommonSummary"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:text="@string/task_info_road_name" />
 
                 <TextView
+                    style="@style/CommonSummary"
                     android:id="@+id/tv_road_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -59,11 +64,13 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    style="@style/CommonSummary"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:text="@string/task_origin" />
 
                 <TextView
+                    style="@style/CommonSummary"
                     android:id="@+id/tv_origin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
