--- a/yljapp/src/main/res/layout/listview_login_staff.xml
+++ b/yljapp/src/main/res/layout/listview_login_staff.xml
@@ -5,19 +5,26 @@
 
     <TextView
         android:id="@+id/tv_name"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textColor="@color/common_text_black"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/tv_company"
+            android:layout_marginRight="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/common_sub_text_grep"/>
         <TextView
             android:id="@+id/tv_group"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:textColor="@color/common_sub_text_grep"/>
     </LinearLayout>
 </LinearLayout>
