--- a/yljapp/src/main/res/values/colors.xml
+++ b/yljapp/src/main/res/values/colors.xml
@@ -8,8 +8,13 @@
     <color name="btn_blue">#4c57d8</color>
     <color name="btn_blue_pressed">#4cffff</color>
 
+    <color name="fab_color">#4c57d8</color>
+    <color name="fab_color_clicked">#4cffff</color>
 
+    <color name="common_text_black">#303030</color>
+    <color name="common_sub_text_grep">#666666</color>
 
+    <color name="common_title_blue">#4c57d8</color>
 
 
 
@@ -18,6 +23,7 @@
     <!-- 下按时隐形-->
     <color name="setting_item_press">#eeeef0</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black">#000000</color>
 
     <!-- 分割线-->
     <color name="list_div_color">#dfe4e5</color>
